[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="alpaca_test"
version="0.0.1"
requires-python = ">= 3.8"
dependencies = [
    "alpaca-trade-api",
    "pandas",
    "numpy",
    "plotly",
    "mplfinance"
]

[project.optional-dependencies]
test = ["pytest"]
ci = [
	"pycodestyle",
	"pydocstyle",
	"pylint",
	"vulture",
	"xenon",
	"mypy",
	"flake8"
]
